--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -183,7 +183,9 @@
           <div class="card-body">
             <h4 class="card-title">Maurcio Gallardo</h4>
             <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-            <p class="card-text">Estudiante del cuarto ciclo de la carrera de Ingeniería Biomédica. Planea especializarse en las ramas de Biomecánica y Rehabilitación e Ingeniería Clínica. Asimismo, en un futuro, aspira a realizar un postgrado en la Universidad de Heidelberg para de este modo aportar mejorías, tanto estructurales como tecnológicas, al sector peruano de salud. Su rol en el presente proyecto será de organizar y verificar las diferentes labores que relice el grupo para que este logre los objetivos propuestos.</p>
+            <p class="card-text-justify">Estudiante del cuarto ciclo de la carrera de Ingeniería Biomédica. Planea especializarse en las ramas de Biomecánica y Rehabilitación 
+              e Ingeniería Clínica. Asimismo, en un futuro, aspira a realizar un postgrado en la Universidad de Heidelberg para de este modo aportar mejorías, tanto estructurales
+              como tecnológicas, al sector peruano de salud. <p>Su rol en el presente proyecto será de organizar y verificar las diferentes labores que relice el grupo para que este logre los objetivos propuestos.</p></p>
           </div>
           <div class="card-footer">
             <a href="#">mauricio.gallardo@upch.pe</a>
