--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -185,7 +185,7 @@
             <h6 class="card-subtitle mb-2 text-muted">Coordinador General</h6>
             <p class="card-text-align: justify;">Estudiante del cuarto ciclo de la carrera de Ingeniería Biomédica. Planea especializarse en las ramas de Biomecánica y Rehabilitación 
               e Ingeniería Clínica. Asimismo, en un futuro, aspira a realizar un postgrado en la Universidad de Heidelberg para de este modo aportar mejorías, tanto estructurales
-              como tecnológicas, al sector peruano de salud. <p>Su rol en el presente proyecto será de organizar y verificar las diferentes labores que relice el grupo para que este logre los objetivos propuestos.</p></p>
+              como tecnológicas, al sector peruano de salud. <p style="text-align: justify;">Su rol en el presente proyecto será de organizar y verificar las diferentes labores que relice el grupo para que este logre los objetivos propuestos.</p></p>
           </div>
           <div class="card-footer">
             <a href="#">mauricio.gallardo@upch.pe</a>
