--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -139,16 +139,15 @@
         <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
       </div>
       <div class="col-lg-6">
-        <h2>About Modern Business</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+        <h2>Acerca de nosotros</h2>
+        <p style="text-align: justify;">Somos un conjunto de estudiantes pertenecientes a la Pontificia Universidad Católica del Perú y a la Universidad Peruana 
+          Cayetano Heredia. Cada miembro en este grupo, buscamos conseguir un mismo objetivo: transformar la salud en el Perú.</p>
       </div>
     </div>
     <!-- /.row -->
 
     <!-- Miembros del equipo -->
-    <h2>Nuestro equipo</h2>
+    <h2 align="center">Nuestro equipo</h2>
 
     <div class="row">
       <div class="col-lg-4 mb-4">
@@ -156,8 +155,8 @@
           <img class="card-img-top" src="https://d500.epimg.net/cincodias/imagenes/2016/07/04/lifestyle/1467646262_522853_1467646344_noticia_normal.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Catherine Boggio</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+            <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
+            <p style="text-align: justify;">Escribir breve biografía</p>
           </div>
           <div class="card-footer">
             <a href="#">catherine.boggio@upch.pe</a>
@@ -169,8 +168,8 @@
           <img class="card-img-top" src="http://placehold.it/750x450" alt="">
           <div class="card-body">
             <h4 class="card-title">Ariana Carbajal</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+            <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
+            <p style="text-align: justify;">Escribir breve biografía</p>
           </div>
           <div class="card-footer">
             <a href="#">ariana.carbajal@upch.pe</a>
@@ -198,8 +197,8 @@
           <img class="card-img-top" src="http://placehold.it/750x450" alt="">
           <div class="card-body">
             <h4 class="card-title">Alejandro Jave</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Rol :</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+            <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
+            <p style="text-align: justify;">Escribir breve biografía</p>
           </div>
           <div class="card-footer">
             <a href="#">alejandro.jave@upch.pe</a>
@@ -211,8 +210,8 @@
           <img class="card-img-top" src="http://placehold.it/750x450" alt="">
           <div class="card-body">
             <h4 class="card-title">Victor Rivas</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+            <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
+            <p style="text-align: justify;">Escribir breve biografía</p>
           </div>
           <div class="card-footer">
             <a href="#">victor.rivas@upch.pe</a>
@@ -229,7 +228,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Página oficial equipo 17-Fundamentos de Biodiseño 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Página oficial Grupo 17 - Fundamentos de Biodiseño 2020</p>
     </div>
     <!-- /.container -->
   </footer>
