--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="card h-100">
           <h4 class="card-header">Miembros</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p style="text-align: justify;">Conoce más sobre los 5 integrantes del equipo 17.</p>
           </div>
           <div class="card-footer">
             <a href="Sobre nosotros.html" class="btn btn-primary">Ver Más</a>
@@ -141,7 +141,7 @@
         <div class="card h-100">
           <h4 class="card-header">Análisis del caso clinico</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
+            <p style="text-align: justify;">Profundización de los temas abordados en los casos clínicos propuestos.</p>
           </div>
           <div class="card-footer">
             <a href="caso_clinico.html" class="btn btn-primary">Ver Más</a>
@@ -152,7 +152,7 @@
         <div class="card h-100">
           <h4 class="card-header">Propuestas de solución</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p style="text-align: justify;">Presentación de las posibles soluciones planteadas por el grupo.</p>
           </div>
           <div class="card-footer">
             <a href="propuestas.html" class="btn btn-primary">Ver Más</a>
@@ -163,7 +163,7 @@
     <!-- /.row -->
 
     <!-- Entregables -->
-    <h2>Portfolio Heading</h2>
+    <h2>Entregables</h2>
 
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
