--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -141,7 +141,7 @@
       <div class="col-lg-6">
         <h2>Acerca de nosotros</h2>
         <p style="text-align: justify;">Somos un conjunto de estudiantes pertenecientes a la Pontificia Universidad Católica del Perú y a la Universidad Peruana 
-          Cayetano Heredia. Cada miembro en este grupo, buscamos conseguir un mismo objetivo: transformar la salud en el Perú.</p>
+          Cayetano Heredia. Cada uno de los miembros de grupo buscamos conseguir un mismo objetivo: transformar la salud en el Perú.</p>
       </div>
     </div>
     <!-- /.row -->
