--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -136,7 +136,7 @@
     <!-- Intro Content -->
     <div class="row">
       <div class="col-lg-6">
-        <img class="img-fluid rounded mb-4" src="C:/Users/mauri/Pictures/PUCP-UPCH.jpg" title="Ingeniería Biomédica" widht="750px" height="450px">
+        <img class="img-fluid rounded mb-4" src="https://images.app.goo.gl/78ANozAStGLZiUfA7" widht="750px" height="450px"/>
       </div>
       <div class="col-lg-6">
         <h2>Acerca de nosotros</h2>
