--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -152,7 +152,7 @@
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+          <img class="card-img-top" src="http://placehold.it/750x450" title="Catherine Boggio"/>
           <div class="card-body">
             <h4 class="card-title">Catherine Boggio</h4>
             <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
@@ -165,7 +165,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+          <img class="card-img-top" src="http://placehold.it/750x450" title="Ariana Carbajal"/>
           <div class="card-body">
             <h4 class="card-title">Ariana Carbajal</h4>
             <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
@@ -178,7 +178,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+          <img class="card-img-top" src="http://placehold.it/750x450" title="Mauricio Gallardo"/>
           <div class="card-body">
             <h4 class="card-title">Maurcio Gallardo</h4>
             <h6 class="card-subtitle mb-2 text-muted">Coordinador General</h6>
@@ -194,7 +194,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+          <img class="card-img-top" src="http://placehold.it/750x450" title="Alejandro Jave"/>
           <div class="card-body">
             <h4 class="card-title">Alejandro Jave</h4>
             <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
@@ -207,7 +207,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+          <img class="card-img-top" src="http://placehold.it/750x450" title="Victor Rivas"/>
           <div class="card-body">
             <h4 class="card-title">Victor Rivas</h4>
             <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
