--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -156,7 +156,7 @@
           <div class="card-body">
             <h4 class="card-title">Catherine Boggio</h4>
             <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
-            <p style="text-align: justify;">Escribir breve biografía</p>
+            <p style="text-align: justify;">Escribir breve biografía<p style="text-align: justify;">Su rol en el presente proyecto será de ...</p></p>
           </div>
           <div class="card-footer">
             <a href="#">catherine.boggio@upch.pe</a>
@@ -169,7 +169,7 @@
           <div class="card-body">
             <h4 class="card-title">Ariana Carbajal</h4>
             <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
-            <p style="text-align: justify;">Escribir breve biografía</p>
+            <p style="text-align: justify;">Escribir breve biografía<p style="text-align: justify;">Su rol en el presente proyecto será de ...</p></p>
           </div>
           <div class="card-footer">
             <a href="#">ariana.carbajal@upch.pe</a>
@@ -198,7 +198,7 @@
           <div class="card-body">
             <h4 class="card-title">Alejandro Jave</h4>
             <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
-            <p style="text-align: justify;">Escribir breve biografía</p>
+            <p style="text-align: justify;">Escribir breve biografía<p style="text-align: justify;">Su rol en el presente proyecto será de ...</p></p>
           </div>
           <div class="card-footer">
             <a href="#">alejandro.jave@upch.pe</a>
@@ -211,7 +211,7 @@
           <div class="card-body">
             <h4 class="card-title">Victor Rivas</h4>
             <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
-            <p style="text-align: justify;">Escribir breve biografía</p>
+            <p style="text-align: justify;">Escribir breve biografía<p style="text-align: justify;">Su rol en el presente proyecto será de ...</p></p>
           </div>
           <div class="card-footer">
             <a href="#">victor.rivas@upch.pe</a>
