--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -159,7 +159,7 @@
             <p style="text-align: justify;">Escribir breve biografía<p style="text-align: justify;">Su rol en el presente proyecto será de ...</p></p>
           </div>
           <div class="card-footer">
-            <a href="#" href="mailto:catherine.boggio@upch.pe">catherine.boggio@upch.pe</a>
+            <a href="mailto:catherine.boggio@upch.pe">catherine.boggio@upch.pe</a>
           </div>
         </div>
       </div>
