--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -172,7 +172,7 @@
             <p style="text-align: justify;">Escribir breve biografía<p style="text-align: justify;">Su rol en el presente proyecto será de ...</p></p>
           </div>
           <div class="card-footer">
-            <a href="#">ariana.carbajal@upch.pe</a>
+            <a href="mailto:ariana.carbajal@upch.pe">ariana.carbajal@upch.pe</a>
           </div>
         </div>
       </div>
@@ -188,7 +188,7 @@
             <p style="text-align: justify;">Su rol en el presente proyecto será de organizar y verificar las diferentes labores que relice el grupo para que este logre los objetivos propuestos.</p></p>
           </div>
           <div class="card-footer">
-            <a href="#">mauricio.gallardo@upch.pe</a>
+            <a href="mailto:mauricio.gallardo@upch.pe">mauricio.gallardo@upch.pe</a>
           </div>
         </div>
       </div>
@@ -201,7 +201,7 @@
             <p style="text-align: justify;">Escribir breve biografía<p style="text-align: justify;">Su rol en el presente proyecto será de ...</p></p>
           </div>
           <div class="card-footer">
-            <a href="#">alejandro.jave@upch.pe</a>
+            <a href="mailto:alejandro.jave@upch.pe">alejandro.jave@upch.pe</a>
           </div>
         </div>
       </div>
@@ -214,7 +214,7 @@
             <p style="text-align: justify;">Escribir breve biografía<p style="text-align: justify;">Su rol en el presente proyecto será de ...</p></p>
           </div>
           <div class="card-footer">
-            <a href="#">victor.rivas@upch.pe</a>
+            <a href="mailto:victor.rivas@upch.pe">victor.rivas@upch.pe</a>
           </div>
         </div>
       </div>
