--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -156,8 +156,8 @@
           <div class="card-body">
             <h4 class="card-title">Catherine Boggio</h4>
             <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
-            <p style="text-align: justify;">Estudiante del cuarto ciclo de la carrera de Ingeniería Biomédica. Planea especializarse en las ramas de Biomecánica y Rehabilitación 
-              e Ingeniería Clínica.<p style="text-align: justify;">Su meta es mejorar los equipos de diagnóstico que existen en el Perú por medio de los conocimientos adquiridos 
+            <p style="text-align: justify;">Estudiante de ingeniería biomédica que cursa su cuarto ciclo y planea especializarse en el área de Ingeniería
+              Clínica y Señales e Imágenes Biomédicas.<p style="text-align: justify;">Su meta es mejorar los equipos de diagnóstico que existen en el Perú por medio de los conocimientos adquiridos 
             durante el estudio de la carrera y un postgrado en Johns Hopkins University.</p>
             <p style="text-align: justify;">Su rol es el presente trabajo es realizar la investigación sobre el caso clínico que se está tratando.</p></p>
             
