--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -155,7 +155,7 @@
           <img class="card-img-top" src="http://placehold.it/750x450" title="Catherine Boggio"/>
           <div class="card-body">
             <h4 class="card-title">Catherine Boggio</h4>
-            <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
+            <h6 class="card-subtitle mb-2 text-muted">Investigadora</h6>
             <p style="text-align: justify;">Estudiante de ingeniería biomédica que cursa su cuarto ciclo y planea especializarse en las áreas de Ingeniería
               Clínica y Señales e Imágenes Biomédicas.<p style="text-align: justify;">Su meta es mejorar los equipos de diagnóstico que existen en el Perú por medio de los conocimientos adquiridos 
             durante el estudio de la carrera y un postgrado en Johns Hopkins University.</p>
