--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -155,8 +155,12 @@
           <img class="card-img-top" src="foto1.jpg" title="Catherine Boggio"/>
           <div class="card-body">
             <h4 class="card-title">Catherine Boggio</h4>
-            <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
-            <p style="text-align: justify;">Escribir breve biografía<p style="text-align: justify;">Su rol en el presente proyecto será de ...</p></p>
+            <h6 class="card-subtitle mb-2 text-muted">Investigadora</h6>
+            <p style="text-align: justify;">Estudiante de ingeniería biomédica que cursa su cuarto ciclo y planea especializarse en las áreas de 
+              Ingeniería Clínica y Señales e Imágenes Biomédicas.<p style="text-align: justify;">Su meta es mejorar los equipos de diagnóstico que
+            existen en el Perú por medio de los conocimientos adquiridos durante el estudio de la carrera y un postgrado en Johns Hopkins University.</p>
+            <p style="text-align: justify;">Su rol en el presente proyecto será de ahondar e indagar en los diferentes temas que abarcan los casos clínicos
+              que se van a tratar.</p></p>
           </div>
           <div class="card-footer">
             <a href="mailto:catherine.boggio@upch.pe">catherine.boggio@upch.pe</a>
@@ -198,7 +202,8 @@
           <div class="card-body">
             <h4 class="card-title">Alejandro Jave</h4>
             <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
-            <p style="text-align: justify;">Estudiante de Ingeniería Biomédica que busca especializarse en las areas de Biomateriales e Ingeniería de Tejidos y Biomecánica.<p style="text-align: justify;"> Aspira a poder desarrollar herrmientas y metodos innovadores que contribuyan a una mejor calidad de vida en los pacientes</p>
+            <p style="text-align: justify;">Estudiante de Ingeniería Biomédica que busca especializarse en las áreas de Biomateriales e Ingeniería 
+              de Tejidos y Biomecánica.<p style="text-align: justify;"> Aspira a poder desarrollar nuevas herramientas y métodos innovadores que contribuyan a una mejor calidad de vida en los pacientes</p>
             <p style="text-align: justify;">Su rol en el presente proyecto será de diseñar y programar la pagina web manteniendo un diseño que sea limpio y sencillo de navegar.</p></p>
           </div>
           <div class="card-footer">
