--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -204,7 +204,7 @@
             <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
             <p style="text-align: justify;">Estudiante de Ingeniería Biomédica que busca especializarse en las áreas de Biomateriales e Ingeniería 
               de Tejidos y Biomecánica.<p style="text-align: justify;"> Aspira a poder desarrollar nuevas herramientas y métodos innovadores que contribuyan a una mejor calidad de vida en los pacientes</p>
-            <p style="text-align: justify;">Su rol en el presente proyecto será de diseñar y programar la pagina web manteniendo un diseño que sea limpio y sencillo de navegar.</p></p>
+            <p style="text-align: justify;">Su rol en el presente proyecto será de diseñar y programar la página web manteniendo un diseño que sea limpio y sencillo de navegar para los diferentes tipos de usuarios.</p></p>
           </div>
           <div class="card-footer">
             <a href="mailto:alejandro.jave@upch.pe">alejandro.jave@upch.pe</a>
