--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -201,10 +201,12 @@
           <img class="card-img-top" src="http://placehold.it/750x450" title="Alejandro Jave"/>
           <div class="card-body">
             <h4 class="card-title">Alejandro Jave</h4>
-            <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
+            <h6 class="card-subtitle mb-2 text-muted">Diseñador web</h6>
             <p style="text-align: justify;">Estudiante de Ingeniería Biomédica que busca especializarse en las áreas de Biomateriales e Ingeniería 
-              de Tejidos y Biomecánica.<p style="text-align: justify;"> Aspira a poder desarrollar nuevas herramientas y métodos innovadores que contribuyan a una mejor calidad de vida en los pacientes</p>
-            <p style="text-align: justify;">Su rol en el presente proyecto será de diseñar y programar la página web manteniendo un diseño que sea limpio y sencillo de navegar para los diferentes tipos de usuarios.</p></p>
+              de Tejidos y Biomecánica.<p style="text-align: justify;"> Aspira a poder desarrollar nuevas herramientas y métodos innovadores que 
+            contribuyan a una mejor calidad de vida en los pacientes</p>
+            <p style="text-align: justify;">Su rol en el presente proyecto será de diseñar y programar la página web manteniendo un diseño que sea limpio 
+              y sencillo de navegar para los diferentes tipos de usuarios.</p></p>
           </div>
           <div class="card-footer">
             <a href="mailto:alejandro.jave@upch.pe">alejandro.jave@upch.pe</a>
