--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -152,7 +152,7 @@
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="foto1.jpg" title="Catherine Boggio"/>
+          <img class="card-img-top" src="https://grupo-17.github.io/externo/fotos/foto1.jpg" title="Catherine Boggio"/>
           <div class="card-body">
             <h4 class="card-title">Catherine Boggio</h4>
             <h6 class="card-subtitle mb-2 text-muted">Investigadora</h6>
@@ -182,7 +182,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="foto2.jpg" title="Mauricio Gallardo"/>
+          <img class="card-img-top" src="https://grupo-17.github.io/externo/fotos/foto2.jpg" title="Mauricio Gallardo"/>
           <div class="card-body">
             <h4 class="card-title">Maurcio Gallardo</h4>
             <h6 class="card-subtitle mb-2 text-muted">Coordinador General</h6>
@@ -201,12 +201,10 @@
           <img class="card-img-top" src="http://placehold.it/750x450" title="Alejandro Jave"/>
           <div class="card-body">
             <h4 class="card-title">Alejandro Jave</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Diseñador web</h6>
+            <h6 class="card-subtitle mb-2 text-muted">Diseñador Web</h6>
             <p style="text-align: justify;">Estudiante de Ingeniería Biomédica que busca especializarse en las áreas de Biomateriales e Ingeniería 
-              de Tejidos y Biomecánica.<p style="text-align: justify;"> Aspira a poder desarrollar nuevas herramientas y métodos innovadores que 
-            contribuyan a una mejor calidad de vida en los pacientes</p>
-            <p style="text-align: justify;">Su rol en el presente proyecto será de diseñar y programar la página web manteniendo un diseño que sea limpio 
-              y sencillo de navegar para los diferentes tipos de usuarios.</p></p>
+              de Tejidos y Biomecánica.<p style="text-align: justify;"> Aspira a poder desarrollar nuevas herramientas y métodos innovadores que contribuyan a una mejor calidad de vida en los pacientes</p>
+            <p style="text-align: justify;">Su rol en el presente proyecto será de diseñar y programar la página web manteniendo un diseño que sea limpio y sencillo de navegar para los diferentes tipos de usuarios.</p></p>
           </div>
           <div class="card-footer">
             <a href="mailto:alejandro.jave@upch.pe">alejandro.jave@upch.pe</a>
