--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -152,7 +152,7 @@
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="https://grupo-17.github.io/externo/fotos/foto1.jpg" title="Catherine Boggio" widht="400px" height="500px"/>
+          <img class="card-img-top" src="https://grupo-17.github.io/externo/foto/foto1.jpg" title="Catherine Boggio" widht="400px" height="500px"/>
           <div class="card-body">
             <h4 class="card-title">Catherine Boggio</h4>
             <h6 class="card-subtitle mb-2 text-muted">Investigadora</h6>
@@ -182,7 +182,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="https://grupo-17.github.io/externo/fotos/foto2.jpg" title="Mauricio Gallardo" widht="400px" height="500px"/>
+          <img class="card-img-top" src="https://grupo-17.github.io/externo/foto/foto2.jpg" title="Mauricio Gallardo" widht="400px" height="500px"/>
           <div class="card-body">
             <h4 class="card-title">Maurcio Gallardo</h4>
             <h6 class="card-subtitle mb-2 text-muted">Coordinador General</h6>
