--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -169,7 +169,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="http://placehold.it/750x450" title="Ariana Carbajal" widht="400px" height="500px"/>
+          <img class="card-img-top" src="https://grupo-17.github.io/externo/foto/foto3.JPEG" title="Ariana Carbajal" widht="400px" height="500px"/>
           <div class="card-body">
             <h4 class="card-title">Ariana Carbajal</h4>
             <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
