--- a/Sobre nosotros.html
+++ b/Sobre nosotros.html
@@ -169,11 +169,15 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="https://grupo-17.github.io/externo/foto/foto3.PNG" title="Ariana Carbajal"/>
+          <img class="card-img-top" src="https://grupo-17.github.io/externo/foto/foto3.png" title="Ariana Carbajal"/>
           <div class="card-body">
             <h4 class="card-title">Ariana Carbajal</h4>
-            <h6 class="card-subtitle mb-2 text-muted">ROL</h6>
-            <p style="text-align: justify;">Escribir breve biografía<p style="text-align: justify;">Su rol en el presente proyecto será de ...</p></p>
+            <h6 class="card-subtitle mb-2 text-muted">Invest</h6>
+             <p style="text-align: justify;"> Estudiante de la carrera de Ingeniería Biomédica que cursa su cuarto ciclo y planea especializarse 
+              en las ramas de Biomecánica y Rehabilitación e Ingeniería de Tejidos y Biomateriales.<p style="text-align: justify;">Sus objetivos son el
+              desarrollo de servicios de regeneración celular para ayudar a la recuperación de los pacientesy la creación de prótesis o exoesqueletos
+              para ayudar a las personas con discapacidad; y, de este modo, poder mejorar la calidad de vida de los pacientes.</p>
+              <p style="text-align: justify;">Su rol en el presente proyecto será de ...</p></p>
           </div>
           <div class="card-footer">
             <a href="mailto:ariana.carbajal@upch.pe">ariana.carbajal@upch.pe</a>
